Fix close button color modal headers and repeaters
The "close" and "delete" buttons in modal popups and repeaters inside modal popups was nigh invisible on a light background. This should fix it up.

--- a/modules/system/assets/ui/less/popup.less
+++ b/modules/system/assets/ui/less/popup.less
@@ -46,7 +46,6 @@
     .border-radius(5px);
     border: none;
     background: @color-popup-content-bg;
-    .close { color: #fff; }
 }
 
 .modal-header {
@@ -57,6 +56,9 @@
     .border-top-radius(5px);
 
     border: none;
+    .close {
+        color: #fff;
+    }
 
     h4 {
         font-weight: 600;
